# scoretopia

./: .agent-context.md  .gitignore  README.md  SETUP.md  pyproject.toml
config/: scoretopia.example.yaml
docs/adr/: 001-core-architecture.md
scripts/: lint.sh  test.sh
src/scoretopia/: __init__.py  cli.py  config.py
src/scoretopia/discord/: adapter.py  embeds.py  publisher.py  views.py
src/scoretopia/domain/: __init__.py  actions.py  field_correction.py  games.py  ingest.py  matching.py  mod_approval.py  player_identity.py  player_resolution.py  players.py  results.py  roster_edit.py  training_export.py  win_ratios.py
src/scoretopia/ingest/: __init__.py
src/scoretopia/ports/: bot.py
src/scoretopia/reports/: __init__.py  dto.py  format.py  game_settings.py  kinds.py  (+3 more)
tests/: test_config.py  test_confirm_last_ingest.py  test_discord_adapter.py  test_discord_confirm_last_ux.py  test_discord_embeds.py  test_discord_publisher.py  test_discord_views.py  test_field_correction.py  test_game_matching.py  test_game_service.py  test_ingest.py  test_mod_approval.py  test_no_embedded_sample_names.py  test_player_identity.py  test_player_name_matching.py  test_player_resolution.py  test_player_service.py  test_report_scheduler.py  test_reports.py  test_roster_edit.py  test_sample_screenshot_ocr_goldens.py  test_sample_screenshots_directory.py  test_screenshot_detect.py  test_screenshot_extract.py  test_screenshot_extract_cli.py  test_screenshot_game_basics.py  test_screenshot_tribes.py  test_storage_repos.py  test_training_export.py  test_win_ratio_service.py
(+15 files in other folders)
