[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scoretopia"
version = "0.1.0"
description = "Discord bot for tracking Polytopia game results"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.scripts]
scoretopia-extract = "scoretopia.screenshot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
